--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.19",
     "react": "16.9.0",
     "react-dom": "16.9.0",
+    "react-icons": "^3.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-collapsible": "^1.5.1",
     "react-native-elements": "^1.2.7",
